<resources>

    <string name="app_title">My School App</string>
    <string name="app_name">SchoolsActivity</string>

    <string name="loading">Loading ...</string>


    <string name="totalstudents">Total Students : %s</string>
    <string name="location">Neighbourhood : %s</string>

    <string name="school_name">School - %s</string>
    <string name="test_takers">Number of Test Takers - %s</string>

    <string name="avg_reading_score">Average Reading Score - %s</string>
    <string name="avg_math_score">Average Math Score - %s</string>
    <string name="avg_writing_score">Average Writing Score - %s</string>

    <string name="hint_test_takers">Test Takers</string>
    <string name="hint_reading_score">Reading Score</string>
    <string name="hint_math_score">Math Score</string>
    <string name="hint_writing_score">Writing Score</string>
    <string name="title_score_activity">SAT Score Details</string>
    <string name="error_loading_details">Error Loading Details</string>
    <string name="retry">Retry</string>
    <string name="retry_todo">Retry (Todo) </string>
    <string name="nyc_schools">NYC Schools</string>
    <string name="school_icon">School Icon</string>
</resources>