<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="com.example.nyschools.uistate.SchoolListLoadState" />
        <variable
            name="schoolListViewModel"
            type="com.example.nyschools.SchoolListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_16"
        android:background="@color/white"
        tools:context="com.example.nyschools.ui.SchoolListActivity">


        <com.google.android.material.textview.MaterialTextView
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/header"
            android:textSize="@dimen/sp_24"
            android:text="@string/nyc_schools"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/loadingTV"
            android:visibility="@{schoolListViewModel.schoolListStateLiveData.loadState ==  SchoolListLoadState.LOADING ? View.VISIBLE : View.GONE}"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:visibility="@{schoolListViewModel.schoolListStateLiveData.loadState ==  SchoolListLoadState.FAILURE ? View.VISIBLE : View.GONE}"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_todo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:padding="@dimen/dp_16"
            android:id="@+id/schoolsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{schoolListViewModel.schoolListStateLiveData.loadState ==  SchoolListLoadState.SUCCESS ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
